     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:padding="@dimen/padding_small"
             android:stretchColumns="0,1" >

             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/short_message"
                     android:onClick="onSmsButtonClicked"
                     android:src="@drawable/ic_main_sms" />

                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/schedule"
                     android:onClick="onScheduleButtonClicked"
                     android:src="@drawable/ic_main_schedule" />

             </TableRow>

             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/short_message"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/schedule"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

             </TableRow>

             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/template"
                     android:onClick="onTemplateButtonClicked"
                     android:src="@drawable/ic_main_template" />

                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/csv_import"
                     android:onClick="onCsvImportButtonClicked"
                     android:src="@drawable/ic_main_csv_import" />

             </TableRow>

             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/template"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/csv_import"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

             </TableRow>

             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/send_sos"
                     android:onClick="onSosButtonClicked"
                     android:src="@drawable/ic_main_sos" />

                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/setting"
                     android:onClick="onSettingButtonClicked"
                     android:src="@drawable/ic_main_setting" />

             </TableRow>

             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/send_sos"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/setting"
                     android:textAppearance="?android:attr/textAppearanceMedium" />

             </TableRow>

         </TableLayout>

    </RelativeLayout>
